--- a/JS/06-data-types.html
+++ b/JS/06-data-types.html
@@ -23,6 +23,15 @@
             var salary;
             console.log(salary);
             console.log(typeof(salary));
+
+            var age = 35;
+            console.log(age)
+
+            age = "Said";
+            console.log(age)
+
+            var age = "35"
+            console.log(typeof(age));
         </script>
 
 </body>
