--- a/JS/08-aritmetic-operators copy.html
+++ b/JS/08-aritmetic-operators copy.html
@@ -14,6 +14,18 @@
             console.log(num);
             num++;
             console.log(num);
+
+
+            const total = num + 123;
+            console.log(total);
+            const result = "Toplam " + total;
+            console.log(result);
+
+            const result1 = 5 + 45 + ".";
+            console.log(result1);
+
+            const result2 = 5 + 45 + "10";
+            console.log(result2);
         </script>
 
 </body>
