--- a/JS/08-aritmetic-operators copy.html
+++ b/JS/08-aritmetic-operators copy.html
@@ -10,7 +10,7 @@
         <script>
             let num = 13;
             console.log(num);
-            num = num ** 2;
+            num = num ** 2; //num'un karesini aldık
             console.log(num);
             num++;
             console.log(num);
@@ -26,6 +26,9 @@
 
             const result2 = 5 + 45 + "10";
             console.log(result2);
+
+            const result3 = "5" + 5 + 45;
+            console.log(result3);
         </script>
 
 </body>
