--- a/JS/09-data-type-conversion.html
+++ b/JS/09-data-type-conversion.html
@@ -19,6 +19,11 @@
 
         const result2 = Number("Said") + 5;
         console.log(result2);
+
+
+        let said = "13";
+        const said1 = Number(said);
+        console.log(said);
 </script>
 
 </body>
