--- a/JS/09-data-type-conversion.html
+++ b/JS/09-data-type-conversion.html
@@ -24,6 +24,10 @@
         let said = "13";
         const said1 = Number(said);
         console.log(said);
+
+        //let ==> Değişken
+        //const ==> Sabit 
+        //Bunların arasında ki farkları iyi öğren !!!!
 </script>
 
 </body>
