--- a/JS/09-data-type-conversion.html
+++ b/JS/09-data-type-conversion.html
@@ -28,6 +28,7 @@
         //let ==> Değişken
         //const ==> Sabit 
         //Bunların arasında ki farkları iyi öğren !!!!
+        //Java Script
 </script>
 
 </body>
